--- a/app/src/main/res/layout/activity_gaseta.xml
+++ b/app/src/main/res/layout/activity_gaseta.xml
@@ -8,8 +8,7 @@
     tools:context=".view.MainActivity">
 
 
-        <TextView
-            android:id="@+id/txtTitulo"
+        <TextView android:id="@+id/txtTitulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -18,8 +17,7 @@
             android:textStyle="bold"
             android:layout_margin="8dp"/>
 
-        <ImageView
-            android:id="@+id/imageView"
+        <ImageView android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -32,7 +30,7 @@
     android:orientation="horizontal"
     android:layout_marginLeft="46dp"
     >
-        <EditText
+        <EditText android:id="@+id/txtGasolina"
             android:layout_width="120dp"
             android:layout_height="48dp"
             android:layout_marginStart="16dp"
@@ -42,7 +40,7 @@
             android:hint="@string/hint_gasolina"
             android:gravity="center"/>
 
-        <EditText
+        <EditText android:id="@+id/txtAlcool"
             android:layout_width="120dp"
             android:layout_height="48dp"
             android:layout_marginStart="16dp"
@@ -53,36 +51,31 @@
             android:gravity="center"/>
 </androidx.appcompat.widget.LinearLayoutCompat>
 
-        <Button
-            android:id="@+id/button"
+        <Button android:id="@+id/btnCalcular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/calcular" />
 
-        <TextView
-            android:id="@+id/txtResultado"
+        <TextView android:id="@+id/txtResultado"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/resultado" />
 
-        <Button
-            android:id="@+id/btnLimpar"
+        <Button android:id="@+id/btnLimpar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:text="@string/limpar" />
 
-        <Button
-            android:id="@+id/btnSalvar"
+        <Button android:id="@+id/btnSalvar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:text="@string/salvar" />
 
-        <Button
-            android:id="@+id/btnFinalizar"
+        <Button android:id="@+id/btnFinalizar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
