--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:ems="10"
-            android:hint="@string/hint_alcool"
+            android:hint="@string/hint_etanol"
             android:gravity="center"/>
 </androidx.appcompat.widget.LinearLayoutCompat>
 
