--- a/app/src/main/res/layout/activity_gaseta.xml
+++ b/app/src/main/res/layout/activity_gaseta.xml
@@ -44,6 +44,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
+                android:inputType="numberDecimal"
                 android:layout_toLeftOf="@+id/txtEtanol"
                 android:ems="10"
                 android:hint="@string/hint_gasolina" />
@@ -55,6 +56,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
+                android:inputType="numberDecimal"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="@string/hint_etanol"
@@ -90,6 +92,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:enabled="false"
         android:text="@string/salvar" />
 
     <Button
