--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_weight="1.0"
                 android:gravity="center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:hint="@string/hint_gasolina" />
 
             <EditText
@@ -50,7 +50,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_weight="1.0"
                 android:gravity="center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:hint="@string/hint_etanol"
                 />
 
